--- a/jenkinsCapistranoOl6/scripts/additional/jenkins/jobs/examples/jobs/cap_rollback_on_transactions/builds/1/build.xml
+++ b/jenkinsCapistranoOl6/scripts/additional/jenkins/jobs/examples/jobs/cap_rollback_on_transactions/builds/1/build.xml
@@ -4,24 +4,22 @@
     <hudson.model.CauseAction>
       <causeBag class="linked-hash-map">
         <entry>
-          <hudson.model.Cause_-UserIdCause>
-            <userId>percy</userId>
-          </hudson.model.Cause_-UserIdCause>
+          <hudson.model.Cause_-UserIdCause/>
           <int>1</int>
         </entry>
       </causeBag>
     </hudson.model.CauseAction>
     <com.cloudbees.jenkins.plugins.bitbucket.FirstCheckoutCompletedInvisibleAction plugin="cloudbees-bitbucket-branch-source@2.4.4"/>
   </actions>
-  <queueId>44</queueId>
-  <timestamp>1589440070417</timestamp>
-  <startTime>1589440070419</startTime>
-  <result>FAILURE</result>
-  <duration>345</duration>
+  <queueId>3</queueId>
+  <timestamp>1590439972188</timestamp>
+  <startTime>1590439972194</startTime>
+  <result>SUCCESS</result>
+  <duration>757</duration>
   <charset>UTF-8</charset>
   <keepLog>false</keepLog>
   <builtOn></builtOn>
-  <workspace>/app/jenkins/workspace/examples/cap_rollback_on_transactions</workspace>
+  <workspace>/app/jenkins/jobs/examples/jobs/cap_rollback_on_transactions/workspace</workspace>
   <hudsonVersion>2.222.3</hudsonVersion>
   <scm class="hudson.scm.NullChangeLogParser"/>
   <culprits class="com.google.common.collect.EmptyImmutableSortedSet"/>
